Sec 24 - 3. Added about page and some links

--- a/main/templates/front/home.html
+++ b/main/templates/front/home.html
@@ -52,7 +52,7 @@
                   </div>
                   <div class="flex-wr-e-c">
                      <div class="left-topbar">
-                        <a href="#" class="left-topbar-item">
+                        <a href="{% url 'about' %}" class="left-topbar-item">
                         About
                         </a>
                         <a href="#" class="left-topbar-item">
@@ -90,7 +90,7 @@
             <div class="wrap-logo no-banner container">
                <!-- Logo desktop -->		
                <div class="logo">
-                  <a href="index.html"><img src="{% static 'front/images/icons/logo-01.png' %}" alt="LOGO"></a>
+                  <a href="{% url 'home' %}"><img src="{% static 'front/images/icons/logo-01.png' %}" alt="LOGO"></a>
                </div>
             </div>
             <!--  -->
@@ -98,12 +98,12 @@
                <div class="main-nav">
                   <!-- Menu desktop -->
                   <nav class="menu-desktop">
-                     <a class="logo-stick" href="index.html">
+                     <a class="logo-stick" href="{% url 'home' %}">
                      <img src="{% static 'front/images/icons/logo-01.png' %}" alt="LOGO">
                      </a>
                      <ul class="main-menu justify-content-center">
                         <li class="main-menu-active">
-                           <a href="index.html">Home</a>
+                           <a href="{% url 'home' %}">Home</a>
                         </li>
                         <li class="mega-menu-item">
                            <a href="category-01.html">News</a>
