Sec 25 - 1. Added dynamic pagetitle from db

--- a/main/templates/front/about.html
+++ b/main/templates/front/about.html
@@ -1,6 +1,10 @@
 {% extends 'front/master.html' %}
 {% load static %}
 {% block mainblock %}
+
+{% block pagetitle %}
+<title>{{ pagetitle }} | About</title>
+{% endblock pagetitle %}
 <!-- Breadcrumb -->
 <div class="container">
    <div class="headline bg0 flex-wr-sb-c p-rl-20 p-tb-8">
