--- a/main/templates/front/home.html
+++ b/main/templates/front/home.html
@@ -2,6 +2,10 @@
 {% load static %}
 {% block mainblock %}
 
+{% block pagetitle %}
+<title>{{ pagetitle }} | Home</title>
+{% endblock pagetitle %}
+
       <section class="bg0">
          <div class="row m-rl-0 justify-content-center">
             <div class="col-md-4 p-rl-1 p-b-2">
