Sec 25 - 2. Added sosmed dynamic links from db

--- a/main/templates/front/home.html
+++ b/main/templates/front/home.html
@@ -3,7 +3,7 @@
 {% block mainblock %}
 
 {% block pagetitle %}
-<title>{{ pagetitle }} | Home</title>
+<title>{{ pagetitle.name }} | Home</title>
 {% endblock pagetitle %}
 
       <section class="bg0">
