--- a/main/templates/front/about.html
+++ b/main/templates/front/about.html
@@ -3,7 +3,7 @@
 {% block mainblock %}
 
 {% block pagetitle %}
-<title>{{ pagetitle }} | About</title>
+<title>{{ pagetitle.name }} | About</title>
 {% endblock pagetitle %}
 <!-- Breadcrumb -->
 <div class="container">
