Sec 25 - 3. Added site settings in the model

--- a/main/templates/front/master.html
+++ b/main/templates/front/master.html
@@ -1948,7 +1948,7 @@
                   <a href="#" class="f1-s-1 cl10 hov-link1">
                      <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                      
-                  <a href="https:maika.com" target="_blank"><b style="color: #17B978;">MAIKA Collections</b></a> All rights reserved
+                  <a href="https://maikacollective.com/" target="_blank"><b style="color: #17B978;">MAIKA Collective Studio</b></a> All rights reserved
                   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                </span>
             </div>
