Sec 25 - 4. Final, Reconfigured the model for sosmed

--- a/main/templates/front/master.html
+++ b/main/templates/front/master.html
@@ -1831,7 +1831,8 @@
                            {{ pagetitle.about }}
                         </p>
                         <p class="f1-s-1 cl11 p-b-16">
-                           Any questions? Call us on (+1) 96 716 6879
+                           Any questions? <br> 
+                           Call us on {{sosmed.phone}}
                         </p>
                         <div class="p-t-15">
                            <a href="{{ sosmed.fb }}" class="fs-18 cl11 hov-cl10 trans-03 m-r-8">
@@ -1948,7 +1949,7 @@
                   <a href="#" class="f1-s-1 cl10 hov-link1">
                      <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                      
-                  <a href="https://maikacollective.com/" target="_blank"><b style="color: #17B978;">MAIKA Collective Studio</b></a> All rights reserved
+                  <a href="{{sosmed.website}}" target="_blank"><b style="color: #17B978;">MAIKA Collective Studio</b></a> All rights reserved
                   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                </span>
             </div>
