--- a/main/templates/front/home.html
+++ b/main/templates/front/home.html
@@ -452,8 +452,8 @@
                </h3>
             </div>
             <div class="row p-t-35">
+               {% for i in news %}
                <div class="col-sm-6 col-md-4">
-                  <!-- Item latest --> 
                   <div class="m-b-45">
                      <a href="blog-detail-02.html" class="wrap-pic-w hov1 trans-03">
                      <img src="{% static 'front/images/latest-01.jpg' %}" alt="IMG">
@@ -461,25 +461,26 @@
                      <div class="p-t-16">
                         <h5 class="p-b-5">
                            <a href="blog-detail-02.html" class="f1-m-3 cl2 hov-cl10 trans-03">
-                           You wish lorem ipsum dolor sit amet consectetur 
+                           {{ i.name }}
                            </a>
                         </h5>
+                        <p>{{ i.short_text }}</p>
                         <span class="cl8">
                         <a href="#" class="f1-s-4 cl8 hov-cl10 trans-03">
-                        by John Alvarado
+                        by {{ i.writer }}
                         </a>
                         <span class="f1-s-3 m-rl-3">
                         -
                         </span>
                         <span class="f1-s-3">
-                        Feb 18
+                        {{ i.date }}
                         </span>
                         </span>
                      </div>
                   </div>
                </div>
-               <div class="col-sm-6 col-md-4">
-                  <!-- Item latest --> 
+               {% endfor %}
+               <!-- <div class="col-sm-6 col-md-4">
                   <div class="m-b-45">
                      <a href="blog-detail-02.html" class="wrap-pic-w hov1 trans-03">
                      <img src="{% static 'front/images/latest-02.jpg' %}" alt="IMG">
@@ -505,7 +506,6 @@
                   </div>
                </div>
                <div class="col-sm-6 col-md-4">
-                  <!-- Item latest --> 
                   <div class="m-b-45">
                      <a href="blog-detail-02.html" class="wrap-pic-w hov1 trans-03">
                      <img src="{% static 'front/images/latest-03.jpg' %}" alt="IMG">
@@ -531,7 +531,6 @@
                   </div>
                </div>
                <div class="col-sm-6 col-md-4">
-                  <!-- Item latest --> 
                   <div class="m-b-45">
                      <a href="blog-detail-02.html" class="wrap-pic-w hov1 trans-03">
                      <img src="{% static 'front/images/latest-04.jpg' %}" alt="IMG">
@@ -557,7 +556,6 @@
                   </div>
                </div>
                <div class="col-sm-6 col-md-4">
-                  <!-- Item latest --> 
                   <div class="m-b-45">
                      <a href="blog-detail-02.html" class="wrap-pic-w hov1 trans-03">
                      <img src="{% static 'front/images/latest-05.jpg' %}" alt="IMG">
@@ -583,7 +581,6 @@
                   </div>
                </div>
                <div class="col-sm-6 col-md-4">
-                  <!-- Item latest --> 
                   <div class="m-b-45">
                      <a href="blog-detail-02.html" class="wrap-pic-w hov1 trans-03">
                      <img src="{% static 'front/images/latest-06.jpg' %}" alt="IMG">
@@ -607,7 +604,7 @@
                         </span>
                      </div>
                   </div>
-               </div>
+               </div> -->
             </div>
          </div>
       </section>
