--- a/main/templates/front/home.html
+++ b/main/templates/front/home.html
@@ -452,15 +452,16 @@
                </h3>
             </div>
             <div class="row p-t-35">
+
                {% for i in news %}
                <div class="col-sm-6 col-md-4">
                   <div class="m-b-45">
-                     <a href="{% url 'news_detail' pk=i.pk %}" class="wrap-pic-w hov1 trans-03">
+                     <a href="{% url 'news_detail' word=i.name %}" class="wrap-pic-w hov1 trans-03">
                      <img src="{% static 'front/images/latest-01.jpg' %}" alt="IMG">
                      </a>
                      <div class="p-t-16">
                         <h5 class="p-b-5">
-                           <a href="{% url 'news_detail' pk=i.pk %}" class="f1-m-3 cl2 hov-cl10 trans-03">
+                           <a href="{% url 'news_detail' word=i.name %}" class="f1-m-3 cl2 hov-cl10 trans-03">
                            {{ i.name }}
                            </a>
                         </h5>
@@ -480,6 +481,7 @@
                   </div>
                </div>
                {% endfor %}
+
                <!-- <div class="col-sm-6 col-md-4">
                   <div class="m-b-45">
                      <a href="blog-detail-02.html" class="wrap-pic-w hov1 trans-03">
