--- a/main/templates/front/news_detail.html
+++ b/main/templates/front/news_detail.html
@@ -67,21 +67,10 @@
                            {{ i.body_text }}
                         </p>
                         <!-- Tag -->
-                        <div class="flex-s-s p-t-12 p-b-15">
-                           <span class="f1-s-12 cl5 m-r-8">
-                           Tags:
-                           </span>
-                           <div class="flex-wr-s-s size-w-0">
-                              <a href="#" class="f1-s-12 cl8 hov-link1 m-r-15">
-                              Streetstyle
-                              </a>
-                              <a href="#" class="f1-s-12 cl8 hov-link1 m-r-15">
-                              Crafts
-                              </a>
-                           </div>
-                        </div>
+                        <!-- <div class="flex-s-s p-t-12 p-b-15">
+                        </div> -->
                         <!-- Share -->
-                        <div class="flex-s-s">
+                        <!-- <div class="flex-s-s">
                            <span class="f1-s-12 cl5 p-t-1 m-r-15">
                            Share:
                            </span>
@@ -103,7 +92,7 @@
                               Pinterest
                               </a>
                            </div>
-                        </div>
+                        </div> -->
                      </div>
                      <!-- Leave a comment -->
                      <div>
