--- a/main/templates/back/home.html
+++ b/main/templates/back/home.html
@@ -66,3 +66,9 @@
    </div>
 
 {% endblock master %}   
+
+{% block footerblock %}
+   <!-- HOME FOOTER -- Load and execute javascript code used only in this page -->
+   <script src="{% static 'back/js/pages/index.js' %}"></script>
+   <script>$(function(){ Index.init(); });</script>
+{% endblock footerblock %}
