--- a/main/templates/back/master.html
+++ b/main/templates/back/master.html
@@ -93,7 +93,7 @@
                                     <a href="#">Add News</a>
                                  </li>
                                  <li>
-                                    <a href="#">News List</a>
+                                    <a href="{% url 'news_list' %}">News List</a>
                                  </li>
                               </ul>
                            </li>
@@ -229,8 +229,8 @@
          <!-- For more info please have a look at https://developers.google.com/maps/documentation/javascript/get-api-key#key -->
          <script src="https://maps.googleapis.com/maps/api/js?key="></script>
          <script src="{% static 'back/js/helpers/gmaps.min.js' %}"></script>
-         <!-- Load and execute javascript code used only in this page -->
-         <script src="{% static 'back/js/pages/index.js' %}"></script>
-         <script>$(function(){ Index.init(); });</script>
-      </body>
+
+         {% block footerblock %}
+         {% endblock footerblock %}
+         
    </html>
