--- a/main/templates/back/news_list.html
+++ b/main/templates/back/news_list.html
@@ -27,6 +27,7 @@
 	            <tr>
 	               <th class="text-center">ID</th>
 	               <th class="text-center">Image</th>
+	               <th>Title</th>
 	               <th>Date</th>
 	               <th>Category</th>
 	               <th>Writer</th>
@@ -35,13 +36,15 @@
 	            </tr>
 	         </thead>
 	         <tbody>
+	         	{% for nl in news %}
 	            <tr>
-	               <td class="text-center">1</td>
+	               <td class="text-center">{{nl.pk}}</td>
 	               <td class="text-center"><img src="{% static 'back/img/placeholders/avatars/avatar15.jpg' %}" alt="avatar" class="img-circle"></td>
-	               <td>2020/01/20</td>
-	               <td>Sport</td>
-	               <td>Admin</td>
-	               <td>100</td>
+	               <td>{{nl.name}}</td>
+	               <td>{{nl.date}}</td>
+	               <td>-</td>
+	               <td>{{nl.writer}}</td>
+	               <td>-</td>
 	               <td class="text-center">
 	                  <div class="btn-group">
 	                     <a href="javascript:void(0)" data-toggle="tooltip" title="Edit" class="btn btn-xs btn-default"><i class="fa fa-pencil"> Edit</i></a>
@@ -49,6 +52,7 @@
 	                  </div>
 	               </td>
 	            </tr>
+	            {% endfor %}
 	         </tbody>
 	      </table>
 	   </div>
