--- a/main/templates/back/master.html
+++ b/main/templates/back/master.html
@@ -56,7 +56,7 @@
                      <!-- Sidebar Content -->
                      <div class="sidebar-content">
                         <!-- Brand -->
-                        <a href="/panel" class="sidebar-brand">
+                        <a href="{% url 'home' %}" class="sidebar-brand">
                         <i class="gi gi-flash"></i><span class="sidebar-nav-mini-hide"><strong>Admin</strong>Panel</span>
                         </a>
                         <!-- END Brand -->
