--- a/main/templates/front/master.html
+++ b/main/templates/front/master.html
@@ -53,6 +53,9 @@
                   </div>
                   <div class="flex-wr-e-c">
                      <div class="left-topbar">
+                        <a href="{% url 'panel' %}" class="left-topbar-item">
+                        Panel
+                        </a>
                         <a href="{% url 'about' %}" class="left-topbar-item">
                         About
                         </a>
