--- a/main/templates/back/master.html
+++ b/main/templates/back/master.html
@@ -90,10 +90,10 @@
                               <a href="#" class="sidebar-nav-menu"><i class="fa fa-angle-left sidebar-nav-indicator sidebar-nav-mini-hide"></i><i class="gi gi-show_big_thumbnails sidebar-nav-icon"></i><span class="sidebar-nav-mini-hide">News</span></a>
                               <ul>
                                  <li>
-                                    <a href="#">Add News</a>
+                                    <a href="{% url 'news_add' %}">Add News</a>
                                  </li>
                                  <li>
-                                    <a href="{% url 'news_list' %}">News List</a>
+                                    <a href="{% url 'news_list' %}">List News</a>
                                  </li>
                               </ul>
                            </li>
