--- a/main/templates/back/news_list.html
+++ b/main/templates/back/news_list.html
@@ -6,7 +6,7 @@
 	<div class="content-header">
 	   <div class="header-section">
 	      <h1>
-	         <i class="fa fa-table"></i>News List<br><small>You can add, edit and delete news list</small>
+	         <i class="fa fa-table"></i>List News<br><small>You can add, edit and delete news list</small>
 	      </h1>
 	   </div>
 	</div>
