--- a/main/templates/back/news_add.html
+++ b/main/templates/back/news_add.html
@@ -42,20 +42,14 @@
 	            </div>
 	            <div class="form-group">
 	               <div class="col-md-12">
-	                  <textarea type="text" id="newstxtshort" name="newstxtshort" rows="5" class="form-control" placeholder="Short txt">Short Txt</textarea>
+	                  <textarea type="text" id="newstxtshort" name="newstxtshort" rows="5" class="form-control" placeholder="Short txt"></textarea>
 	               </div>
 	            </div>
-	            <script>
-	               CKEDITOR.replace( 'newstxtshort' );
-	            </script>
 	            <div class="form-group">
 	               <div class="col-md-12">
-	                  <textarea type="text" id="newstxt" name="newstxt" rows="5" class="form-control" placeholder="Body txt">Body Txt</textarea>
+	                  <textarea type="text" id="newstxt" name="newstxt" rows="5" class="form-control" placeholder="Body txt"></textarea>
 	               </div>
 	            </div>
-	            <script>
-	               CKEDITOR.replace( 'newstxt' );
-	            </script>
 	            <div class="form-group">
 	               <div class="col-md-12">
 	                  <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-angle-right"></i> Submit</button>
