--- a/main/templates/back/news_add.html
+++ b/main/templates/back/news_add.html
@@ -33,10 +33,10 @@
 	               </div>
 	               <div class="col-md-6">
 	                  <select id="newscat" name="newscat" class="select-chosen" data-placeholder="Choose a Category..." style="width: 250px;">
-	                     <option value=""></option>
-	                     <option value="">Politic</option>
-	                     <option value="">Sport</option>
-	                     <option value="">National</option>
+	                     <option></option>
+	                     <option value="cat1">Politic</option>
+	                     <option value="cat2">Sport</option>
+	                     <option value="cat3">National</option>
 	                  </select>
 	               </div>
 	            </div>
