--- a/main/templates/back/news_add.html
+++ b/main/templates/back/news_add.html
@@ -26,7 +26,9 @@
 	         <!-- END Form Elements Title -->
 	         <!-- Basic Form Elements Content -->
 	         <form action="{%url 'news_add' %}" method="post" enctype="multipart/form-data" class="form-horizontal form-bordered" >
+	            
 	            {% csrf_token %}
+
 	            <div class="form-group">
 	               <div class="col-md-6">
 	                  <input type="text" id="newstitle" name="newstitle" class="form-control" placeholder="News Title">
@@ -40,16 +42,25 @@
 	                  </select>
 	               </div>
 	            </div>
+
 	            <div class="form-group">
 	               <div class="col-md-12">
 	                  <textarea type="text" id="newstxtshort" name="newstxtshort" rows="5" class="form-control" placeholder="Short txt"></textarea>
 	               </div>
 	            </div>
+
 	            <div class="form-group">
 	               <div class="col-md-12">
 	                  <textarea type="text" id="newstxt" name="newstxt" rows="5" class="form-control" placeholder="Body txt"></textarea>
 	               </div>
 	            </div>
+
+	            <div class="form-group">
+						<div class="col-md-6">
+							<input type="file" id="myfile" name="myfile" rows="5" class="form-control" placeholder="Body txt">
+						</div>
+					</div>
+
 	            <div class="form-group">
 	               <div class="col-md-12">
 	                  <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-angle-right"></i> Submit</button>
