--- a/main/templates/front/home.html
+++ b/main/templates/front/home.html
@@ -457,7 +457,8 @@
                <div class="col-sm-6 col-md-4">
                   <div class="m-b-45">
                      <a href="{% url 'news_detail' word=i.name %}" class="wrap-pic-w hov1 trans-03">
-                     <img src="{{ i.pic }}" alt="IMG">
+                     <img src="{{ i.picurl }}" alt="IMG">
+                     <!-- <img src="{{ i.pic }}" alt="IMG"> -->
                      <!-- <img src="{% static 'front/images/blog-list-01.jpg' %}" alt="IMG"> -->
                      </a>
                      <div class="p-t-16">
