--- a/main/templates/back/news_list.html
+++ b/main/templates/back/news_list.html
@@ -39,7 +39,10 @@
 	         	{% for nl in news %}<!-- nl = news list  -->
 	            <tr>
 	               <td class="text-center">{{nl.pk}}</td>
-	               <td class="text-center"><img src="{% static 'back/img/placeholders/avatars/avatar15.jpg' %}" alt="avatar" class="img-circle"></td>
+	               <td class="text-center">
+	               	<img 
+							style="display: inline-block; width:50px; height: 50px;" 
+	               	src="{{nl.picurl}}" alt="avatar" class="img-circle"></td>
 	               <td>{{nl.name}}</td>
 	               <td>{{nl.date}}</td>
 	               <td>{{nl.catname}}</td>
