--- a/main/templates/front/news_detail.html
+++ b/main/templates/front/news_detail.html
@@ -61,7 +61,8 @@
                            </a>
                         </div>
                         <div class="wrap-pic-max-w p-b-30">
-                           <img src="{{i.pic}}" alt="IMG">
+                           <img src="{{i.picurl}}" alt="IMG">
+                           <!-- <img src="{{i.pic}}" alt="IMG"> -->
                            <!-- <img src="{% static 'front/images/blog-list-01.jpg' %}" alt="IMG"> -->
                         </div>
                         <p class="f1-s-11 cl6 p-b-25">
